# bottom-up-attention.pytorch

./: .gitmodules  pyproject.toml  setup.py
bua/caffe/modeling/layers/csrc/nms/: nms.cu  nms_cpu.cpp
utils/: visualize.ipynb
