[project]
name = "bottom-up-attention-pytorch"
version = "0.1.0"
description = "A PyTorch reimplementation of bottom-up-attention models"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch==2.8.0",
    "torchvision==0.23.0",
    "opencv-python-headless",
    "Pillow==8.1.0",
    "apex",
    "detectron2",
    "scikit-image>=0.19.3",
    "numpy==1.21.6",
]

[build-system]
requires = [
    "torch==2.8.0",
]

[tool.uv.extra-build-dependencies]
apex = ["torch==2.8.0"]
detectron2 = ["torch==2.8.0", "ninja"]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu129", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu129", marker = "sys_platform == 'linux'" },
]
apex  = { path = "./apex" }
detectron2  = { path = "./detectron2" }
